# python_project_template

./: .gitignore  Makefile  README.md  README.md.template  setup.cfg  setup.py  tox.ini
project_name/: _version.py
tests/: .gitignore
