[metadata]
name = <your_project_name>

# keep in sync with <your_project_name>/_version.py
version = 0.0.1

description-file = README.md
description = Description of your project
long_description = file: README.md
long_description_content_type = text/markdown

url = <your_git_repo_url>

[tool:pytest]
addopts = --doctest-modules --black --flake8 --pydocstyle --ignore=docs/ --durations=3
doctest_encoding = utf-8
log_cli = 0
log_cli_level = INFO

[pydocstyle]
ignore = D104, D105, D107, D301, D413, D203, D212, D100
match_dir = <your_project_name>

[flake8]
exclude = tests/
ignore = H301, H306, H404, H405, W504, E501, W503, E203, E231
max-line-length = 90
